# parallel-text-aligner

./: .gitignore  .pre-commit-config.yaml  README.md  license-check.txt  pyproject.toml
configs/: default.yaml  default.yml
resources/word_lists/frequency/: DE.txt  EN.txt
resources/word_lists/function_words/: DE.yaml  DE_unsorted.yaml
resources/word_lists/hfcc_word_lists/: DE.yaml  DE_unsorted.yaml  EN.yaml  EN_unsorted.yaml
resources/word_lists/lemmas/: AR.yaml  DE.yaml  EN.yaml
scratch/: make_frequency_lists.py  notes.txt  translation_sources.txt  word_translation_probs.py
src/parallel_text_aligner/: __init__.py  aligner.py
src/parallel_text_aligner/aligners/: __init__.py  sentence_aligner_classic.py  word_aligner_classic.py
src/parallel_text_aligner/alignment_search/: README.md  searcher.py
src/parallel_text_aligner/common/: config.py  locations.py
src/parallel_text_aligner/data/: README.md
src/parallel_text_aligner/data/handling/: __init__.py  handler.py
src/parallel_text_aligner/data/io/: hfcc.py
src/parallel_text_aligner/data/structures/: bitext.py  grid.py
src/parallel_text_aligner/data_handling/: data_handler.py
src/parallel_text_aligner/extras/: extras.py  mocks.py
src/parallel_text_aligner/pairwise_score/: scorer.py
src/parallel_text_aligner/pairwise_score/models/: README.md  model.py
src/parallel_text_aligner/pairwise_score/models/common/: model_protocols.py
src/parallel_text_aligner/pairwise_score/training/: trainer.py
src/parallel_text_aligner/tokenization/sentence/: sentence_tokenizer.py
src/parallel_text_aligner/tokenization/word/: word_tokenizer.py
