[tool.poetry]
name = "parallel-text-aligner"
version = "0.1.0"
description = "Tools for aligning pairs of texts in different languages (or different translations in the same language)."
authors = ["yelircaasi <isaac.r.riley@gmail.com>"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
hydra-core = "^1.3"
matplotlib = "^3.5"
pyyaml = "^6.0"
funcy = "^1.17"
numpy = "^1.25.0"
dynaconf = "^3.1.12"
pandas = "^2.0.2"

[tool.poetry.group.dev.dependencies]
ipython = "^8.7"
pre-commit = "^2.21"
black = {version = "^23.1a1", allow-prereleases = true}
ipykernel = "^6.20.2"

[tool.poetry.extras]
sentence_embeddings = ["sentence-transformers"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
